add delete/update endpoints
